# dagon

./: .gitignore  Dockerfile  Makefile  README.md  config.py  dagon.py  debugger.py  main.py  main2.py  music.py  music_queue.py  others.py  playlist.py  pyproject.toml  utils.py  yt.py
cogs/: fun.py  music.py  rpg.py  views.py
futures/: music.py  playlist.py
legacy/: legacy_main.py
