[tool.poetry]
name = "dagon"
version = "0.1.0"
description = ""
authors = ["morv"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"
pynacl = "^1.5.0"
yt-dlp = "^2023.11.16"
wavelink = ">2.0,<3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
